--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
   },
   "scripts": {
     "start": "node app.js",
-    "test": "./node_modules/.bin/grunt test-coveralls"
+    "test": "./node_modules/.bin/grunt test-coveralls",
+    "build": "cd ~/projects/coloredcoins/colored-copay/ && grunt && cd - && grunt"
   },
   "devDependencies": {
     "adm-zip": "^0.4.7",
