--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "url": "https://github.com/bitpay/copay/issues"
   },
   "dependencies": {
-    "bitcore-wallet-client": "1.5.0",
+    "bitcore-wallet-client": "troggy/bitcore-wallet-client#txp/send-inputs",
     "express": "^4.11.2",
     "fs": "0.0.2",
     "grunt": "^0.4.5",
