--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "moment": "2.10.3",
     "ng-lodash": "0.2.3",
     "qrcode-decoder-js": "*",
-    "trezor-connect": "~1.0.1"
+    "trezor-connect": "~1.0.1",
+    "colu-copay-addon": "~0.1.0"
   }
 }
-
