--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "ng-lodash": "0.2.3",
     "qrcode-decoder-js": "*",
     "trezor-connect": "~1.0.1",
-    "ng-csv": "~0.3.6"
+    "ng-csv": "~0.3.6",
+    "colu-copay-addon": "~0.1.0"
   },
   "resolutions": {
     "angular": "1.4.6"
