--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "url": "https://github.com/bitpay/copay/issues"
   },
   "dependencies": {
-    "bitcore-wallet-client": "troggy/bitcore-wallet-client#txp/send-inputs",
+    "bitcore-wallet-client": "troggy/bitcore-wallet-client#f8b921c2f75cfcb6b23ea4cd801448ec1f0c7b6d",
     "express": "^4.11.2",
     "fs": "0.0.2",
     "grunt": "^0.4.5",
@@ -58,7 +58,7 @@
   "scripts": {
     "start": "node app.js",
     "test": "./node_modules/.bin/grunt test-coveralls",
-    "build": "cd ~/projects/coloredcoins/colored-copay/ && grunt && cd - && grunt"
+    "build": "cd ../colu-copay-addon/ && grunt && cd - && grunt"
   },
   "devDependencies": {
     "adm-zip": "^0.4.7",
