--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
-  "name": "copay",
+  "name": "urv2",
   "keywords": [
     "copay",
+    "urv2",
     "wallet",
     "multisignature",
     "bitcore"
