--- a/browser-extensions/chrome/manifest.json
+++ b/browser-extensions/chrome/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "Copay",
-  "description": "A secure Bitcoin wallet for friends and companies",
+  "name": "urv2",
+  "description": "A secure wallet for friends and companies",
   "version": "APP_VERSION",
   "permissions": [
     "storage",
