--- a/webkitbuilds/.desktop
+++ b/webkitbuilds/.desktop
@@ -1,12 +1,11 @@
 [Desktop Entry]
 Type=Application
-Version=1.9.4
-Name=Copay
+Version=1.1.0
+Name=urv2
 Comment=A multisignature wallet
-Exec=copay
+Exec=urv2
 Icon=icon-256.png
 Terminal=false
 Categories=Finance
 X-Ubuntu-Touch=true
 X-Ubuntu-StageHint=SideStage
-
