--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "copay",
+  "name": "urv2",
   "description": "A multisignature wallet",
-  "author": "BitPay",
-  "version": "1.8.2",
+  "author": "Guillermo Haddad",
+  "version": "1.1.0",
   "keywords": [
     "wallet",
     "copay",
@@ -12,7 +12,7 @@
   ],
   "main": "public/index.html",
   "window": {
-    "title": "Copay - A multisignature wallet",
+    "title": "urv2 - A multisignature wallet",
     "icon": "./public/img/icons/icon-256.png",
     "toolbar": false,
     "show": true,
@@ -30,14 +30,11 @@
     "plugin": false
   },
   "id": "jid1-x7bV5evAaI1P9Q",
-  "homepage": "https://github.com/bitpay/copay",
+  "homepage": "http://urv2.com.br",
   "license": "MIT",
   "repository": {
-    "url": "git://github.com/bitpay/copay.git",
+    "url": "git://github.com/troggy/copay.git",
     "type": "git"
-  },
-  "bugs": {
-    "url": "https://github.com/bitpay/copay/issues"
   },
   "dependencies": {
     "bitcore-wallet-client": "troggy/bitcore-wallet-client#colu",
