Use new package

--- a/cordova/ios/Copay-Info.plist
+++ b/cordova/ios/Copay-Info.plist
@@ -49,7 +49,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>br.com.urv2</string>
+	<string>br.com.urv2.carteira</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
