--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "ng-lodash": "0.2.3",
     "qrcode-decoder-js": "*",
     "trezor-connect": "~1.0.1",
-    "colu-copay-addon": "~0.2.2"
+    "colu-copay-addon": "~0.2.2",
+    "angular-loggly-logger": "~0.2.0"
   }
 }
