Rebrand and reset version numbers

--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "urv2",
+  "name": "Unicoisa",
   "keywords": [
     "copay",
-    "urv2",
+    "Unicoisa",
     "wallet",
     "multisignature",
     "bitcore"
