--- a/browser-extensions/chrome/manifest.json
+++ b/browser-extensions/chrome/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "urv2",
+  "name": "Unicoisa",
   "description": "A secure wallet for friends and companies",
   "version": "APP_VERSION",
   "permissions": [
