--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "urv2",
+  "name": "Unicoisa",
   "description": "A multisignature wallet",
-  "author": "Catalão 72",
-  "version": "1.1.1",
+  "author": "Kosta Korenkov",
+  "version": "1.0.0",
   "keywords": [
     "wallet",
     "copay",
     "multisignature",
     "bitcoin",
+    "assets",
+    "coloredcoins",
+    "colu",
     "bitcore"
   ],
   "main": "public/index.html",
   "window": {
-    "title": "urv2 - A multisignature wallet",
+    "title": "Unicoisa - A multisignature wallet",
     "icon": "./public/img/icons/icon-256.png",
     "toolbar": false,
     "show": true,
@@ -29,11 +32,10 @@
     "java": false,
     "plugin": false
   },
-  "id": "jid1-x7bV5evAaI1P9Q",
-  "homepage": "http://urv2.com.br",
+  "homepage": "http://unicoisa.coloredcoins.org",
   "license": "MIT",
   "repository": {
-    "url": "git://github.com/urv2/wallet.git",
+    "url": "git://github.com/troggy/unicoisa.git",
     "type": "git"
   },
   "dependencies": {
