--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "qrcode-decoder-js": "*",
     "trezor-connect": "~1.0.1",
     "colu-copay-addon": "~0.4.1",
-    "angular-loggly-logger": "~0.2.0"
+    "angular-loggly-logger": "~0.2.0",
+    "he": "~0.5.0"
   }
 }
