--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "trezor-connect": "~1.0.1",
     "ng-csv": "~0.3.6",
     "colu-copay-addon": "~0.4.1",
-    "angular-loggly-logger": "~0.2.0"
+    "angular-loggly-logger": "~0.2.0",
+    "he": "~0.5.0"
   },
   "resolutions": {
     "angular": "1.4.6"
