--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "bitcore-wallet-client": "troggy/bitcore-wallet-client#colu",
+    "ejs": "^2.4.1",
     "express": "^4.11.2",
     "fs": "0.0.2",
     "grunt": "^0.4.5",
@@ -52,7 +53,6 @@
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-exec": "^0.4.6",
-    "mongodb": "^2.1.7",
     "shelljs": "^0.3.0"
   },
   "scripts": {
