chore: naming and versioning
Renamed Unicoisa to ColuWallet
Version is now 2.7.0.2 where 2.7.0 is a base Copay version and 2 is a ColuWallet-specific revision of this base

--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,10 @@
 {
-  "name": "Unicoisa",
+  "name": "ColuWallet",
   "keywords": [
     "copay",
-    "Unicoisa",
+    "ColuWallet",
+    "colu",
+    "coloredcoins",
     "wallet",
     "multisignature",
     "bitcore"
