--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Colu Wallet",
+  "name": "ColuWallet",
   "description": "Digital wallet for Colu assets",
   "author": "Kosta Korenkov",
-  "version": "2.7.0.2",
+  "version": "2.7.0-2",
   "androidVersionCode": "1",
   "keywords": [
     "wallet",
