--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "cordova-android": "5.1.1",
     "grunt": "^1.0.1",
     "grunt-angular-gettext": "^2.2.3",
+    "grunt-angular-templates": "^1.1.0",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-compress": "^1.3.0",
     "grunt-contrib-concat": "^1.0.1",
