--- a/cordova/android/project.properties
+++ b/cordova/android/project.properties
@@ -13,5 +13,6 @@
 android.library.reference.1=CordovaLib
 # Project target.
 target=android-23
+cordova.system.library.1=com.android.support:support-v4:+
 key.store=../../../copay.keystore
 key.alias=copay_play
